gke/go-websocket-sample/manifests/wss-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wss
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "wss-backendconfig"}'
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: wss
  type: NodePort
