gke/go-websocket-sample/manifests/basic-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    networking.gke.io/managed-certificates: certificate-docup
spec:
  backend:
    serviceName: wss
    servicePort: 8080
